src/cses/chessboard_and_queens/clang-tidy.txt
1 error generated.
Error while processing /Users/michael/repos/competitive-programming/src/cses/chessboard_and_queens/chessboard_and_queens.cpp.
/Users/michael/repos/competitive-programming/src/cses/chessboard_and_queens/chessboard_and_queens.cpp:3:10: error: 'array' file not found [clang-diagnostic-error]
    3 | #include <array>
      |          ^~~~~~~
Found compiler error(s).
